# deepagents

./: .gitignore  AGENTS.md  README.md  discovery.md  pyproject.toml  test_bg_tasks.py  test_completion_popup.py  test_skills_loading.py  test_thread_lock.py
docs/: background-tasks.md  extensions.md  models.md  oauth.md  phase2.md  providers.md  settings.md
docs/plans/: 2026-02-14-ghost-glass-implementation.md  2026-02-14-ghost-glass-tui-redesign.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/deepagents_cli/: agent.py  app.py  app.tcss  auth_store.py  background_tasks.py  config.py  default_agent_prompt.md  extensions.py  file_ops.py  input.py  linear_ids.py  main.py  mcp.py  model_controller.py  model_registry.py  model_types.py  openai_compat.py  provider_adapters.py  sessions.py  settings_store.py  textual_adapter.py  theme.py  tools.py  ui.py
src/deepagents_cli/commands/: __init__.py  assemble.py  core.py  model.py  registry.py  types.py
src/deepagents_cli/ext/: __init__.py  linear.py
src/deepagents_cli/integrations/: sandbox_factory.py
src/deepagents_cli/skills/: commands.py  load.py
src/deepagents_cli/widgets/: __init__.py  agents_pill.py  approval.py  autocomplete.py  chat_input.py  diff.py  loading.py  messages.py  model_selector.py  status.py  subagent_panel.py  tool_renderers.py  tool_widgets.py  welcome.py
src/deepagents_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
